# mira

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 6a3d8fb6d6c1_make_payment_id_unique_not_null.py  93e6d4a8e02f_add_payments_table.py  c1a2b3c4d5e6_add_admin_tables_and_user_roles.py
app/admin/: package-lock.json  package.json
app/admin/src/app/: layout.tsx  page.tsx
app/admin/src/app/dashboard/: page.tsx
app/admin/src/app/jobs/: page.tsx
app/admin/src/app/lib/: Shell.tsx  api.ts
app/admin/src/app/login/: page.tsx
app/admin/src/app/payments/: page.tsx
app/admin/src/app/users/: page.tsx
app/api/: deps.py  main.py
app/api/auth/: admin_tokens.py
app/api/routers/: generate.py  users.py
app/api/routers/admin/: auth.py  jobs.py  payments.py  users.py
app/api/services/: bootstrap.py  gemini_image.py
app/bot/: main.py
app/bot/handlers/: buy_coins.py  menu.py  photo.py
app/bot/keyboards/: buy_coins.py
app/bot/middlewares/: api.py
app/bot/services/: api_client.py
app/common/: config.py  constants.py
app/db/models/: __init__.py  admin_audit_log.py  app_settings.py  base.py  generation.py  ledger.py  payment.py  user.py  wallet.py  wallet_hold.py
app/db/repo/: holds.py  payments.py  users.py
